--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.11.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
